--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.mvc.view.suffix=.jsp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=itzstepan12@gmail.com
-spring.mail.password=iczm vfno ganz qnxi
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
